fix for vertical alignment of text

--- a/src/scss/ohhey.scss
+++ b/src/scss/ohhey.scss
@@ -39,8 +39,11 @@
 		cursor: pointer;
 	}
 	.ohhey-text {
+		display: table-cell;
 		position: relative;
 		font-size: 1em;
+		vertical-align: middle;
+		height: 100%;
 	}
 	.ohhey-timer {
 		position: absolute;
